# nsb-ci

./: .gitignore  CMakeLists.txt  README.md  config-ghost-perf.yaml  nsb.pc.in
.github/scripts/: check_perf_thresholds.py  ghost_perf_test_client.py  ghost_simulator.py  plot_perf_metrics.py  run_ghost_perf_capture.sh  run_perf_cases.py  write_perf_summary.py
.github/workflows/: fork-ci.yml  fork-packages.yml  fork-performance.yml
cpp/: README.md
cpp/include/: nsb.h  nsb_client.h  nsb_daemon.h
cpp/rabbit/: README.md
cpp/src/: nsb.cc  nsb_client.cc  nsb_daemon.cc
docs/: fork-ci-cd.md
examples/ns3/: README.md
examples/omnet/: README.md
examples/omnet/nsb_omnet_basic/: makefrag
proto/: nsb.proto
python/: MANIFEST.in  README.md  nsb_client.py  pyproject.toml
python/proto/: __init__.py
rabbit/: README.md
