[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsb-client"
version = "0.1.0"
description = "Python client library for the NSB Network Simulation Bridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "protobuf",
    "redis[hiredis]",
]

[tool.setuptools]
py-modules = ["nsb_client"]
packages = ["proto"]
include-package-data = true
